--- a/style2.css
+++ b/style2.css
@@ -209,17 +209,17 @@ header.scrolled {
   font-family: inherit;
 }
 
-/* When active (animating), add subtle pulse effect without obscuring text */
+/* When active, the whole block flashes to indicate cursor is "alive" */
 #site-role-block.is-active {
-  animation: siteHeaderCursorPulse 0.6s ease-in-out infinite;
+  animation: siteHeaderCursorBlink 0.6s steps(1, end) infinite;
 }
 
-@keyframes siteHeaderCursorPulse {
-  0%, 100% {
+@keyframes siteHeaderCursorBlink {
+  0%, 45% {
     opacity: 1;
   }
-  50% {
-    opacity: 0.85;
+  50%, 100% {
+    opacity: 0.25;
   }
 }
 
